rename method, views

--- a/app/src/main/res/layout/base_layout.xml
+++ b/app/src/main/res/layout/base_layout.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <FrameLayout
@@ -15,7 +16,7 @@
         android:background="#80323232"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -23,6 +24,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:indeterminate="true" />
+        <core.android.widget.BaseTextView
+            android:id="@+id/tv_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fontStyle="light"
+            />
     </FrameLayout>
 
 </FrameLayout>
