--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -16,7 +16,7 @@
             android:background="#fff"
             android:orientation="vertical">
 
-            <core.android.widget.DPTextView
+            <core.android.widget.BaseTextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
