--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,7 +24,7 @@
                 android:src="@drawable/back" />
         </LinearLayout>
 
-        <core.android.widget.DPTextView
+        <core.android.widget.BaseTextView
             app:fontStyle="heavy"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/ll_back"
@@ -39,7 +39,7 @@
             />
 
 
-        <core.android.widget.DPTextView
+        <core.android.widget.BaseTextView
             android:visibility="gone"
             android:layout_marginEnd="24dp"
             android:layout_alignParentEnd="true"
