--- a/app/src/main/res/layout/base_layout.xml
+++ b/app/src/main/res/layout/base_layout.xml
@@ -11,25 +11,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical" />
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/fl_pb"
         android:background="#80323232"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ProgressBar
+            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/tv_loading"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:indeterminate="true" />
         <core.android.widget.BaseTextView
+            android:layout_centerInParent="true"
             android:id="@+id/tv_loading"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fontStyle="light"
             />
-    </FrameLayout>
+    </RelativeLayout>
 
 </FrameLayout>
